--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#GOOD">GOOD</a></li>
+          <li><a href="#GOOD">experiences</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -31,7 +31,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#GOOD" onclick="toggleMenu()">GOOD</a></li>
+          <li><a href="#GOOD" onclick="toggleMenu()">Experiences</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -108,7 +108,7 @@
             <p>
               As a software engineer, I specialize in utilizing a diverse set of tools and languages to bring projects to life. In the realm of back-end development, I'm proficient in .NET, harnessing its power to build robust and efficient server-side applications. On the flip side, I dive into the world of Node.js, leveraging its asynchronous nature to create scalable, event-driven applications.
 
-When it comes to the front-end, I'm well-versed in HTML, CSS, and JavaScript, turning designs into interactive and visually stunning GOODs. Additionally, I have a knack for React, utilizing its component-based architecture to build dynamic and responsive user interfaces that keep users engaged.
+When it comes to the front-end, I'm well-versed in HTML, CSS, and JavaScript, turning designs into interactive and visually stunning experiences. Additionally, I have a knack for React, utilizing its component-based architecture to build dynamic and responsive user interfaces that keep users engaged.
             </p>
           </div>
         </div>
@@ -396,12 +396,36 @@ When it comes to the front-end, I'm well-versed in HTML, CSS, and JavaScript, tu
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="https://school-management-system-lime.vercel.app/school.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="GOOD-sub-title project-title">School Management System</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/mo7amedgom3a/School-Management-System'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://school-management-system-lime.vercel.app/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="https://repository-images.githubusercontent.com/397995905/42f03254-21ee-4cc8-b45c-b6924d849c57"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="GOOD-sub-title project-title">Hospital Management</h2>
+            <h2 class="GOOD-sub-title project-title">Hospital Management System</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -425,6 +449,8 @@ When it comes to the front-end, I'm well-versed in HTML, CSS, and JavaScript, tu
                 class="project-img"
               />
             </div>
+
+            
             <h2 class="GOOD-sub-title project-title">Data Structure Book</h2>
             <div class="btn-container">
               <button
