update homepage image

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>mo7a medgom3a</title>
+    <title>mo7amed gom3a</title>
     <link rel="stylesheet" href="/./css/style.css"/>
     <link rel="stylesheet" href="/./css/mediaqueries.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   </head>
   <body>
     <nav id="desktop-nav">
@@ -68,6 +69,12 @@
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/mo7amedgom3a'"
+          />
+          <img 
+            src="/assets/medium-icon.png"
+            alt="My Medium profile"
+            class="icon"
+            onclick="location.href='https://mo7amedgom3a.medium.com/'"
           />
         </div>
       </div>
