update meduim link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             src="/assets/medium-icon.png"
             alt="My Medium profile"
             class="icon"
-            onclick="location.href='https://mo7amedgom3a.medium.com/'"
+            onclick="location.href='https://medium.com/@mo7amed.gom3a.7moda'"
           />
         </div>
       </div>
